@@ -13,11 +13,16 @@ import java.util.*;
 
 /** Service event is a base class for all Service Events **/
 public abstract class ServiceEvent extends ComponentModelEvent {
-  public ServiceEvent(ServiceBroker sb) {
+  private Class service;
+
+  public ServiceEvent(ServiceBroker sb, Class service) {
     super(sb);
+    this.service = service;
   }
 
   /** @return the source object as a ServiceBroker typed instance **/
   public final ServiceBroker getServiceBroker() { return (ServiceBroker) getSource(); }
 
+  /** @return the specific service involved in this event **/
+  public final Class getService() { return service; };
 }
